--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
               </a>
               <br>
               <strong>Pranav Kadam</strong>,
-              <a href="https://mcl.usc.edu/people/graduate-students/#Hardik_Prajapati">#Hardik Prajapati</a>,
+              <a href="https://mcl.usc.edu/people/graduate-students/#Hardik_Prajapati">Hardik Prajapati</a>,
               <a href="https://scholar.google.com/citations?user=s2zpoasAAAAJ&hl=en&authuser=1">Min Zhang</a>,
               <a href="https://mcl.usc.edu/people/graduate-students/#Jintang_Xue">Jintang Xue</a>,
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
