--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
               <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>
               <br>
-							<em>IEEE International Conference on Acoustics, Speech and Signal Processing, 2023</em>
+							<em>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2023</em>
               <br>
               <a href="./S3I-PointHop/">project page</a>
               /
@@ -565,7 +565,7 @@
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
               <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>
               <br>
-							<em>IEEE International Conference on Image Processing, 2022</em>
+							<em>IEEE International Conference on Image Processing (ICIP), 2022</em>
               <br>
               <a href="./PCRP/index.html">project page</a>
               /
