--- a/S3I-PointHop/index.html
+++ b/S3I-PointHop/index.html
@@ -30,9 +30,9 @@
     <div class="container" id="main">
         <div class="row">
             <h2 class="col-md-12 text-center">
-                <b>PCRP</b>: : SO (3)-Invariant PointHop <br> for 3D Point Cloud Classification</br> 
+                <b>S3I-PointHop</b>: SO (3)-Invariant PointHop <br> for 3D Point Cloud Classification</br> 
                 <small>
-                    IEEE International Conference on Acoustics, Speech and Signal Processing
+                    IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2023
                 </small>
             </h2>
         </div>
