--- a/S3I-PointHop/index.html
+++ b/S3I-PointHop/index.html
@@ -50,19 +50,19 @@
                             Hardik Prajapati
                         </a>
                         </br>University of Southern California
-                    </li><br>
+                    </li>
                     <li>
                         <a href="https://scholar.google.com/citations?user=s2zpoasAAAAJ&hl=en&authuser=1">
                             Min Zhang
                         </a>
                         </br>University of Southern California
-                    </li>
+                    </li><br>
                     <li>
                         <a href="http://mcl.usc.edu/people/graduate-students/#Jintang_Xue">
                             Jintang Xue
                         </a>
                         </br>University of Southern California
-                    </li><br>
+                    </li>
                     <li>
                         <a href="https://www.linkedin.com/in/shanliu">
                           Shan Liu
@@ -155,8 +155,10 @@
                 <div class="form-group col-md-10 col-md-offset-1">
                     <textarea id="bibtex" class="form-control" readonly>
                         @inproceedings{kadam2023s3i,
-                            title={S3I-PointHop: SO (3)-Invariant PointHop for 3D Point Cloud Classification},
-                            author={Kadam, Pranav and Prajapati, Hardik and Zhang, Min and Xue, Jintang and Liu, Shan and Kuo, C.-C. Jay},
+                            title={S3I-PointHop: SO (3)-Invariant PointHop for 
+                            3D Point Cloud Classification},
+                            author={Kadam, Pranav and Prajapati, Hardik and Zhang, 
+                            Min and Xue, Jintang and Liu, Shan and Kuo, C.-C. Jay},
                             journal={arXiv preprint arXiv:2302.11506},
                             year={2023}
                             }
