--- a/index.html
+++ b/index.html
@@ -528,6 +528,34 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="./S3I-PointHop/index.html">
+                <papertitle>PointFlowHop: Green and Interpretable Scene Flow Estimation from Consecutive Point Clouds</papertitle>
+              </a>
+              <br>
+              <strong>Pranav Kadam</strong>,
+              <a href="https://mcl.usc.edu/people/graduate-students/#Jiahao_Gu">Jiahao Gu</a>,
+              <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
+              <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>
+              <br>
+							<em>Submitted to APSIPA Transactions on Signal and Information Processing</em>
+              <br>
+              <a href="./S3I-PointHop/">project page</a>
+              /
+              <a href="https://arxiv.org/abs/2302.11506">arXiv</a>
+            
+              <p>First, a similar pre-aligned point cloud is retrieved from the gallery set. Then, the input object is registered to the retrieved object to estimate its pose.</p>
+            </td>
+          </tr> 
+
+
+          <tr onmouseout="mip360_stop()" onmouseover="mip360_start()"  bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/S3I-PointHop.PNG' width="180" height="160">
+              </div>
+
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="./S3I-PointHop/index.html">
                 <papertitle>S3I-PointHop: SO (3)-Invariant PointHop for 3D Point Cloud Classification</papertitle>
               </a>
               <br>
