--- a/index.html
+++ b/index.html
@@ -522,12 +522,12 @@
           <tr onmouseout="mip360_stop()" onmouseover="mip360_start()"  bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/S3I-PointHop.PNG' width="180" height="160">
+                <img src='images/PointFlowHop.PNG' width="180" height="160">
               </div>
 
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="./S3I-PointHop/index.html">
+              <a href="./PointFlowHop/index.html">
                 <papertitle>PointFlowHop: Green and Interpretable Scene Flow Estimation from Consecutive Point Clouds</papertitle>
               </a>
               <br>
@@ -538,9 +538,9 @@
               <br>
 							<em>Submitted to APSIPA Transactions on Signal and Information Processing</em>
               <br>
-              <a href="./S3I-PointHop/">project page</a>
+              <a href="./PointFlowHop/">project page</a>
               /
-              <a href="https://arxiv.org/abs/2302.11506">arXiv</a>
+              <a href="https://arxiv.org/abs/2302.14193">arXiv</a>
             
               <p>First, a similar pre-aligned point cloud is retrieved from the gallery set. Then, the input object is registered to the retrieved object to estimate its pose.</p>
             </td>
