--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
               /
               <a href="https://arxiv.org/abs/2302.14193">arXiv</a>
             
-              <p>First, a similar pre-aligned point cloud is retrieved from the gallery set. Then, the input object is registered to the retrieved object to estimate its pose.</p>
+              <p>Decomposes 3D scene flow estimation into vehicle ego-motion compensation and object-wise motion estimation steps.</p>
             </td>
           </tr> 
 
@@ -572,7 +572,7 @@
               /
               <a href="https://arxiv.org/abs/2302.11506">arXiv</a>
             
-              <p>First, a similar pre-aligned point cloud is retrieved from the gallery set. Then, the input object is registered to the retrieved object to estimate its pose.</p>
+              <p>Extends PointHop to allow for classification of arbitrarily rotated 3D objects.</p>
             </td>
           </tr> 
 
