--- a/PointFlowHop/index.html
+++ b/PointFlowHop/index.html
@@ -32,7 +32,7 @@
             <h2 class="col-md-12 text-center">
                 <b>PointFlowHop</b>: Green and Interpretable Scene Flow <br> Estimation from Consecutive Point Clouds</br> 
                 <small>
-                    Submitted to APSIPA Transactions on Signal and Information Processing
+                    APSIPA Transactions on Signal and Information Processing
                 </small>
             </h2>
         </div>
