--- a/GreenPointHop/index.html
+++ b/GreenPointHop/index.html
@@ -32,7 +32,7 @@
             <h2 class="col-md-12 text-center">
                 A tiny Machine Learning model for <br>Point Cloud Object Classification</br> 
                 <small>
-                    Submitted to APSIPA Transactions on Signal and Information Processing
+                    APSIPA Transactions on Signal and Information Processing
                 </small>
             </h2>
         </div>
